# lcms2-feedstock

./: README.md
recipe/: CMakeLists.txt  bld.bat  meta.yaml
